landing page restyling

--- a/peerinst/static/peerinst/css/main.scss
+++ b/peerinst/static/peerinst/css/main.scss
@@ -352,6 +352,7 @@ input[type="submit"].thumbs-down {
 .material-icons.md-32 { font-size: 32px; }
 .material-icons.md-36 { font-size: 36px; }
 .material-icons.md-48 { font-size: 48px; }
+.material-icons.md-60 { font-size: 60px; }
 .material-icons.md-96 { font-size: 96px; }
 #logo {
   width: 40px;
