--- a/peerinst/templates/registration/landing_page.html
+++ b/peerinst/templates/registration/landing_page.html
@@ -766,6 +766,7 @@ g.append('circle')
   .attr('cx', 0)
   .attr('cy', 0)
   .attr('r', 40)
+  .style('opacity', 0.8)
   .attr('fill', 'var(--mdc-theme-primary)');
 
 g.append('text')
@@ -774,8 +775,8 @@ g.append('text')
   .attr('x', 0)
   .attr('dx', -10)
   .attr('y', 0)
+  .attr('dy', 15)
   .attr('text-anchor', 'middle')
-  .attr('baseline-shift', '-40%')
   .attr('fill', 'white')
   .style('opacity', 0)
   .text('chat_bubble_outline')
@@ -802,9 +803,9 @@ g.append('text')
   .attr('x', 0)
   .attr('dx', -10)
   .attr('y', 0)
+  .attr('dy', 21)
   .attr('transform', 'scale(-1,1)')
   .attr('text-anchor', 'middle')
-  .attr('baseline-shift', '-60%')
   .attr('fill', 'white')
   .style('opacity', 0)
   .text('chat_bubble_outline')
@@ -835,6 +836,7 @@ g.append('text')
     .attr('cx', 0)
     .attr('cy', 0)
     .attr('r', 40)
+    .style('opacity', 0.8)
     .attr('fill', 'var(--mdc-theme-primary)');
 
   g.append('text')
@@ -842,8 +844,8 @@ g.append('text')
     .attr('x', 0)
     .attr('dx', -15)
     .attr('y', 0)
+    .attr('dy', 11)
     .attr('text-anchor', 'middle')
-    .attr('baseline-shift', '-30%')
     .attr('fill', 'white')
     .text('school');
 
@@ -852,9 +854,9 @@ g.append('text')
     .attr('x', 0)
     .attr('dx', -15)
     .attr('y', 0)
+    .attr('dy', 25)
     .attr('transform', 'scale(-1,1)')
     .attr('text-anchor', 'middle')
-    .attr('baseline-shift', '-70%')
     .attr('fill', 'white')
     .text('home');
 
@@ -867,14 +869,15 @@ g.append('circle')
   .attr('cx', 0)
   .attr('cy', 0)
   .attr('r', 40)
+  .style('opacity', 0.8)
   .attr('fill', 'var(--mdc-theme-primary)');
 
 g.append('text')
   .attr('class', 'material-icons md-48')
   .attr('x', 0)
   .attr('y', 0)
+  .attr('dy', 24)
   .attr('text-anchor', 'middle')
-  .attr('baseline-shift', '-50%')
   .attr('fill', 'white')
   .text('lightbulb_outline');
 
@@ -887,14 +890,15 @@ g.append('text')
     .attr('cx', 0)
     .attr('cy', 0)
     .attr('r', 40)
+    .style('opacity', 0.8)
     .attr('fill', 'var(--mdc-theme-primary)');
 
   g.append('text')
     .attr('class', 'material-icons md-60')
     .attr('x', 0)
     .attr('y', 0)
+    .attr('dy', 30)
     .attr('text-anchor', 'middle')
-    .attr('baseline-shift', '-50%')
     .attr('fill', 'white')
     .text('trending_up');
 
