--- a/peerinst/templates/registration/landing_page.html
+++ b/peerinst/templates/registration/landing_page.html
@@ -116,6 +116,9 @@ header {
   padding-top:10px;
   margin-right:12px;
 }
+.mdc-typography--body1 {
+  font-size: 0.875rem;
+}
 .mdc-typography--headline {
   font-size: 1.3rem;
   line-height: 2rem;
@@ -136,9 +139,15 @@ header {
   margin-left:50px;
   margin-right:20px;
   margin-top:10px;
-  display:none;"
+  display:none;
+  font-style: italic;
+  text-align:left;
 }
 @media (max-width:450px) {
+  .mdc-typography--body1 {
+    font-size: 0.8rem;
+    line-height: 1.1rem;
+  }
   .mdc-typography--headline {
     font-size: 1rem;
     line-height: 1.4rem;
